--- a/pages/smsp/smsp_test_data_html.html
+++ b/pages/smsp/smsp_test_data_html.html
@@ -16,12 +16,12 @@ toc: false
 </colgroup>
 <thead>
 <tr class="header">
-<th align="left">NHS_NUMBER</th>
-<th align="left">DATE_OF_BIRTH</th>
-<th align="left">FAMILY_NAME</th>
-<th align="left">GIVEN_NAME</th>
+<th align="left">NHS NUMBER</th>
+<th align="left">DATE OF BIRTH</th>
+<th align="left">FAMILY NAME</th>
+<th align="left">GIVEN NAME</th>
 <th align="left">GENDER</th>
-<th align="left">POST_CODE</th>
+<th align="left">POST CODE</th>
 
 </tr>
 </thead>
