--- a/pages/smsp/smsp_test_data_html.html
+++ b/pages/smsp/smsp_test_data_html.html
@@ -16,12 +16,12 @@ toc: false
 </colgroup>
 <thead>
 <tr class="header">
-<th align="left">NHS_NUMBER</th>
-<th align="left">DATE_OF_BIRTH</th>
-<th align="left">FAMILY_NAME</th>
-<th align="left">GIVEN_NAME</th>
-<th align="left">GENDER</th>
-<th align="left">POST_CODE</th>
+<th align="left">NHS Number</th>
+<th align="left">Date of Birth</th>
+<th align="left">Family Name</th>
+<th align="left">Given Name</th>
+<th align="left">Gender</th>
+<th align="left">Post Code</th>
 
 </tr>
 </thead>
