--- a/pages/smsp/smsp_test_data_html.html
+++ b/pages/smsp/smsp_test_data_html.html
@@ -29,12 +29,12 @@ toc: false
 
 {% for patient in site.data.open_test_data %}
 <tr>
-<td align="left" markdown="1">{{patient.NHS NUMBER}}</td>
-<td align="left" markdown="1">{{patient.DATE OF BIRTH}}</td>
-<td align="left" markdown="1">{{patient.FAMILY NAME}}</td>
-<td align="left" markdown="1">{{patient.GIVEN NAME}}</td>
+<td align="left" markdown="1">{{patient.NHS_NUMBER}}</td>
+<td align="left" markdown="1">{{patient.DATE_OF_BIRTH}}</td>
+<td align="left" markdown="1">{{patient.FAMILY_NAME}}</td>
+<td align="left" markdown="1">{{patient.GIVEN_NAME}}</td>
 <td align="left" markdown="1">{{patient.GENDER}}</td>
-<td align="left" markdown="1">{{patient.POST CODE}}</td>
+<td align="left" markdown="1">{{patient.POST_CODE}}</td>
 </tr>
 {% endfor %}
 
